Bug #57323
failure of cls_rgw_gc_list is not handled
% Done:
0%
Source:
Tags:
low-hanging-fruit
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Tags:
Description
in "RGWGC::process()" the return code from cls_rgw_gc_list is ignored.
one possible issue is that the value of "truncated' is used uninitialized in ldout
coverity CID 1512008
History
#1 Updated by Casey Bodley 5 months ago
- Tags set to low-hanging-fruit
#2 Updated by Casey Bodley 5 months ago
- Assignee set to Pritha Srivastava
- Backport set to pacific quincy
#3 Updated by Laura Flores 5 months ago
- Tags set to low-hanging-fruit
#5 Updated by Yuval Lifshitz 2 months ago
- Status changed from New to Fix Under Review
- Pull request ID set to 49316