rgw : fix add initialization for RGWGC::process()

Fixes: https://tracker.ceph.com/issues/57323
Signed-off-by: caolei <cao.leilc@inspur.com>
(cherry picked from commit 2e276bfbdbd147b81d2bd7af7a4160862d507f8f)